update home index

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,17 +11,17 @@
   <title>Homepage - Kos Bintang Telang</title>
 
   <!-- Font Awesome Icons -->
-  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
   <!-- Plugin CSS -->
-  <link href="assets/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
   <!-- Theme CSS - Includes Bootstrap -->
-  <link href="assets/css/creative.min.css" rel="stylesheet">
+  <link href="css/creative.min.css" rel="stylesheet">
 
 </head>
 
@@ -47,9 +47,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a href="<?= base_url('auth')?>" class="nav-link js-scroll-trigger">Log in</a>
           </li>
         </ul>
       </div>
@@ -96,29 +93,29 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Tempat parkir</h3>
-            <p class="text-muted mb-0">Tersedia tempat parkir yang luas, teduh dan aman</p>
+            <h3 class="h4 mb-2">Sturdy Themes</h3>
+            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Dapur</h3>
-            <p class="text-muted mb-0">Tersedia dapur bersama yang bersih dan nyaman</p>
+            <h3 class="h4 mb-2">Up to Date</h3>
+            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Free Listrik</h3>
-            <p class="text-muted mb-0">Tidak dipungut biaya listrik tambahan</p>
+            <h3 class="h4 mb-2">Ready to Publish</h3>
+            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Free Air</h3>
-            <p class="text-muted mb-0">Tidak dipungut biaya air tambahan</p>
+            <h3 class="h4 mb-2">Made with Love</h3>
+            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
           </div>
         </div>
       </div>
@@ -130,8 +127,8 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="././././assets/img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="././././assets/img/portfolio/thumbnails/1.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -143,8 +140,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="././././assets/img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="././././assets/img/portfolio/thumbnails/2.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -156,8 +153,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="././././assets/img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="././././assets/img/portfolio/thumbnails/3.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -169,8 +166,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="././././assets/img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="././././assets/img/portfolio/thumbnails/4.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -182,8 +179,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="././././assets/img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="././././assets/img/portfolio/thumbnails/5.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -195,8 +192,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="././././assets/img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="././././assets/img/portfolio/thumbnails/6.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
                 Category
@@ -218,7 +215,6 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Ayo Segera miliki kos impian anda!</h2>
-          <a class="btn btn-light btn-xl js-scroll-trigger"  href="<?= base_url('auth')?>">Booking Sekarang</a>
           <hr class="divider my-4">
           <p class="text-muted mb-5">Dapat kan kenyamanan hunian kos terbaik hanya di Kost Telang
           stok terbatas</p>
@@ -246,15 +242,15 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="assets/js/creative.min.js"></script>
+  <script src="js/creative.min.js"></script>
 
 </body>
 
